{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 109,
  "lineage": "84c51c55-405e-eaac-a48f-5b8d9a4087e8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-009a461ff2fa2cc0e",
            "arn": "arn:aws:ec2:us-east-1:637423621869:elastic-ip/eipalloc-009a461ff2fa2cc0e",
            "association_id": "eipassoc-0c4f87ec54fd23c7a",
            "domain": "vpc",
            "id": "eipalloc-009a461ff2fa2cc0e",
            "network_border_group": "us-east-1",
            "network_interface": "eni-04332c4fc759155ba",
            "private_dns": "ip-172-30-1-219.ec2.internal",
            "private_ip": "172.30.1.219",
            "public_dns": "ec2-34-194-202-63.compute-1.amazonaws.com",
            "public_ip": "34.194.202.63",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "cloud-demo-nat-eip"
            },
            "tags_all": {
              "Name": "cloud-demo-nat-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03a4942b8fcc1f29d",
            "arn": "arn:aws:ec2:us-east-1:637423621869:instance/i-096ed89ca107fdc51",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-096ed89ca107fdc51",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "CM_keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-042b4f17d675fcc19",
            "private_dns": "ip-172-30-3-96.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.30.3.96",
            "public_dns": "ec2-54-89-247-72.compute-1.amazonaws.com",
            "public_ip": "54.89.247.72",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b30f81a9939bbee0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-01a488b6a097fe788"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c7a832218f0e6944",
            "tags": {
              "Name": "cloud-demo-private-instance"
            },
            "tags_all": {
              "Name": "cloud-demo-private-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01a488b6a097fe788"
            ]
          },
          "dependencies": [
            "aws_security_group.private_sg",
            "aws_subnet.private_subnet_1",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.main_vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03a4942b8fcc1f29d",
            "arn": "arn:aws:ec2:us-east-1:637423621869:instance/i-0ef9e1fd1b8b89757",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ef9e1fd1b8b89757",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "CM_keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02262701113ad7225",
            "private_dns": "ip-172-30-1-159.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.30.1.159",
            "public_dns": "ec2-3-85-125-224.compute-1.amazonaws.com",
            "public_ip": "3.85.125.224",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0136d7fb764bcb06b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-01a33d856aa0cc3cd"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-013b0ead8161f7f2a",
            "tags": {
              "Name": "cloud-demo-public-instance"
            },
            "tags_all": {
              "Name": "cloud-demo-public-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01a33d856aa0cc3cd"
            ]
          },
          "dependencies": [
            "aws_security_group.public_sg",
            "aws_subnet.public_subnet_1",
            "aws_vpc.main_vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423621869:internet-gateway/igw-085cd4b99a798baeb",
            "id": "igw-085cd4b99a798baeb",
            "owner_id": "637423621869",
            "tags": {
              "Name": "cloud-demo-igw"
            },
            "tags_all": {
              "Name": "cloud-demo-igw"
            },
            "vpc_id": "vpc-0774418dde80ab947"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:637423621869:loadbalancer/app/cloud-demo-app-lb/5e1633eda0ec5463",
            "arn_suffix": "app/cloud-demo-app-lb/5e1633eda0ec5463",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "cloud-demo-app-lb-1174346948.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:637423621869:loadbalancer/app/cloud-demo-app-lb/5e1633eda0ec5463",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "cloud-demo-app-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-01a33d856aa0cc3cd"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-013b0ead8161f7f2a"
              },
              {
                "subnet_id": "subnet-08c4973a04807bdbf"
              }
            ],
            "subnets": [
              "subnet-013b0ead8161f7f2a",
              "subnet-08c4973a04807bdbf"
            ],
            "tags": {
              "Name": "cloud-demo-lb"
            },
            "tags_all": {
              "Name": "cloud-demo-lb"
            },
            "vpc_id": "vpc-0774418dde80ab947",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.public_sg",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "app_lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:637423621869:listener/app/cloud-demo-app-lb/5e1633eda0ec5463/bb45b5dbfe9ea896",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:637423621869:targetgroup/cloud-demo-app-tg/1274fe9182925b59",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:637423621869:listener/app/cloud-demo-app-lb/5e1633eda0ec5463/bb45b5dbfe9ea896",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:637423621869:loadbalancer/app/cloud-demo-app-lb/5e1633eda0ec5463",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.app_lb",
            "aws_lb_target_group.app_tg",
            "aws_security_group.public_sg",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:637423621869:targetgroup/cloud-demo-app-tg/1274fe9182925b59",
            "arn_suffix": "targetgroup/cloud-demo-app-tg/1274fe9182925b59",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:637423621869:targetgroup/cloud-demo-app-tg/1274fe9182925b59",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:637423621869:loadbalancer/app/cloud-demo-app-lb/5e1633eda0ec5463"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "cloud-demo-app-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "cloud-demo-tg"
            },
            "tags_all": {
              "Name": "cloud-demo-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0774418dde80ab947"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-009a461ff2fa2cc0e",
            "association_id": "eipassoc-0c4f87ec54fd23c7a",
            "connectivity_type": "public",
            "id": "nat-09207b4c50902f3e1",
            "network_interface_id": "eni-04332c4fc759155ba",
            "private_ip": "172.30.1.219",
            "public_ip": "34.194.202.63",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-013b0ead8161f7f2a",
            "tags": {
              "Name": "cloud-demo-nat-gateway"
            },
            "tags_all": {
              "Name": "cloud-demo-nat-gateway"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.public_subnet_1",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423621869:route-table/rtb-0eea34f6e301adfa0",
            "id": "rtb-0eea34f6e301adfa0",
            "owner_id": "637423621869",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09207b4c50902f3e1",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cloud-demo-private-rt"
            },
            "tags_all": {
              "Name": "cloud-demo-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0774418dde80ab947"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gw",
            "aws_subnet.public_subnet_1",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423621869:route-table/rtb-045ca22737bd4fedf",
            "id": "rtb-045ca22737bd4fedf",
            "owner_id": "637423621869",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-085cd4b99a798baeb",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cloud-demo-public-rt"
            },
            "tags_all": {
              "Name": "cloud-demo-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0774418dde80ab947"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-002f23ff16bce70d1",
            "route_table_id": "rtb-0eea34f6e301adfa0",
            "subnet_id": "subnet-0c7a832218f0e6944"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet_1",
            "aws_subnet.public_subnet_1",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00f16a79a1275cd2d",
            "route_table_id": "rtb-0eea34f6e301adfa0",
            "subnet_id": "subnet-01a87ff317b5473a5"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet_2",
            "aws_subnet.public_subnet_1",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f96c9251eb3c3a61",
            "route_table_id": "rtb-045ca22737bd4fedf",
            "subnet_id": "subnet-013b0ead8161f7f2a"
          },
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_1",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-009071102ea8b7fe1",
            "route_table_id": "rtb-045ca22737bd4fedf",
            "subnet_id": "subnet-08c4973a04807bdbf"
          },
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_2",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423621869:security-group/sg-01a488b6a097fe788",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01a488b6a097fe788",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.30.1.0/24",
                  "172.30.2.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20240915143905924100000004",
            "name_prefix": "terraform-",
            "owner_id": "637423621869",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cloud-demo-private-sg"
            },
            "tags_all": {
              "Name": "cloud-demo-private-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0774418dde80ab947"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423621869:security-group/sg-01a33d856aa0cc3cd",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01a33d856aa0cc3cd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240915143854121200000001",
            "name_prefix": "terraform-",
            "owner_id": "637423621869",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cloud-demo-public-sg"
            },
            "tags_all": {
              "Name": "cloud-demo-public-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0774418dde80ab947"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423621869:subnet/subnet-0c7a832218f0e6944",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.30.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c7a832218f0e6944",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423621869",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloud-demo-private-subnet-1"
            },
            "tags_all": {
              "Name": "cloud-demo-private-subnet-1"
            },
            "vpc_id": "vpc-0774418dde80ab947"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423621869:subnet/subnet-01a87ff317b5473a5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.30.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01a87ff317b5473a5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423621869",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloud-demo-private-subnet-2"
            },
            "tags_all": {
              "Name": "cloud-demo-private-subnet-2"
            },
            "vpc_id": "vpc-0774418dde80ab947"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423621869:subnet/subnet-013b0ead8161f7f2a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.30.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-013b0ead8161f7f2a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "637423621869",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloud-demo-public-subnet-1"
            },
            "tags_all": {
              "Name": "cloud-demo-public-subnet-1"
            },
            "vpc_id": "vpc-0774418dde80ab947"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423621869:subnet/subnet-08c4973a04807bdbf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.30.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08c4973a04807bdbf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "637423621869",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloud-demo-public-subnet-2"
            },
            "tags_all": {
              "Name": "cloud-demo-public-subnet-2"
            },
            "vpc_id": "vpc-0774418dde80ab947"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423621869:vpc/vpc-0774418dde80ab947",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.30.0.0/16",
            "default_network_acl_id": "acl-0e2e893198127ce60",
            "default_route_table_id": "rtb-0b554dbb029f049d4",
            "default_security_group_id": "sg-0f95b4da6fe0a5649",
            "dhcp_options_id": "dopt-07bf0b6f149bde6ac",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0774418dde80ab947",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b554dbb029f049d4",
            "owner_id": "637423621869",
            "tags": {
              "Name": "cloud-demo-vpc"
            },
            "tags_all": {
              "Name": "cloud-demo-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}